--- a/millionaire.css
+++ b/millionaire.css
@@ -33,7 +33,7 @@ img {
 
 /* Specify the location, height and width of the elements */
 
-#base img {
+#kbc_back img {
     width: 100%;
     height: 100%;
 }
@@ -85,7 +85,7 @@ img {
 
 }
 
-#messageBox {
+#kbc_lifeline_text{
     background: none repeat scroll 0 0 rgba(68, 41, 158, 0.9);
     border-radius: 50px;
     color: white;
@@ -99,7 +99,7 @@ img {
     width: 50%;
     z-index: 2;
 }
-#messageBox p {
+#kbc_lifeline_text p {
     width: 87%;
     text-align: center;
     padding: 5%;
