--- a/modules/quiz/quiz.css
+++ b/modules/quiz/quiz.css
@@ -8,17 +8,29 @@
 
 }
 
-#statement-area {
-    background: none repeat scroll 0 0 rgba(68, 41, 158, 0.8);
+#kbc-question-back{
+    /*background: none repeat scroll 0 0 rgba(68, 41, 158, 0.8);*/
     border-radius:0px 50px 0px 50px;
-    height: 30%;
+    height: 35%;
     left: 10%;
-    padding: 20px 0 20px 20px;
     top: 10%;
     width: 93%;
     color: white;
     box-shadow: 3px 5px 90px black inset;
     border: 2px solid #B8ADDE;
+}
+#kbc-question-back img{
+    width: 100%;
+    height: 100%;
+}
+
+#kbc-question{
+    height: 30%;
+    padding: 20px 0 20px 20px;
+   top: 0;
+    width: 93%;
+    color: white;
+    position: absolute;
 }
 
 #options-area {
@@ -28,7 +40,7 @@
 
 }
 
-.option-block {
+.kbc-answer-back {
     list-style: none;
     margin-left: -9%;
     cursor: pointer;
@@ -43,8 +55,9 @@
     color: white;
     font-size: 14px;
     border: 2px solid #B8ADDE;
+    position: relative;
 }
-.option-block:hover{
+.kbc-answer-back:hover{
     background: rgba(255, 136, 0, 1) ;
     color: black;
 }
