--- a/millionaire.css
+++ b/millionaire.css
@@ -34,7 +34,7 @@ img {
 
 /* Specify the location, height and width of the elements */
 
-#kbc_back img {
+#base img {
     width: 100%;
     height: 100%;
 }
@@ -78,11 +78,8 @@ img {
     margin: 1%;
     text-align: center;
     display: inline-block;
-    /*border: 2px solid black;*/
     cursor: pointer;
     height: 90%;
-    /*color: white;*/
-    /*border-radius: 50px;*/
 
 }
 
@@ -107,13 +104,14 @@ img {
     left: 28%;
 }
 
-#kbc_lifeline_text{
-    background: none repeat scroll 0 0 rgba(68, 41, 158, 0.9);
-    border-radius: 50px;
+#kbc-lifeline{
+    background: none repeat scroll 0 0;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
     color: white;
     display: none;
     font-size: 1em;
-    height: 50%;
+    height: auto;
     margin-left: 6%;
     margin-top: 10%;
     padding: 4%;
@@ -121,7 +119,7 @@ img {
     width: 50%;
     z-index: 2;
 }
-#kbc_lifeline_text p {
+#kbc-lifeline p {
     width: 87%;
     text-align: center;
     padding: 5%;
@@ -129,8 +127,6 @@ img {
 }
 #messageOk, #messageCancel {
     border: 1px solid white;
-    /*bottom: 5%;*/
-    /*left: 45%;*/
     padding: 3%;
     color: white;
     cursor: pointer;
@@ -138,16 +134,6 @@ img {
     margin: 3%;
 
 }
-/*#messageCancel{*/
-    /*border: 1px solid white;*/
-    /*bottom: 5%;*/
-    /*left: 45%;*/
-    /*position: absolute;*/
-    /*padding: 3%;*/
-    /*color: white;*/
-    /*cursor: pointer;*/
-    /*border-radius: 10px;*/
-/*}*/
 
 #messageOk2 {
     border: 1px solid white;
@@ -168,13 +154,14 @@ img {
     color: gold;
 }
 
-#fifty_fifty {
-    background: none repeat scroll 0 0 rgba(68, 41, 158, 0.9);
-    border-radius: 50px;
+#poll {
+    background: none repeat scroll 0 0;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
     color: white;
     display: none;
     font-size: 1em;
-    height: 50%;
+    height: 40%;
     margin-left: 5%;
     margin-top: 10%;
     padding: 4%;
@@ -186,7 +173,7 @@ img {
 
 
 #A {
-    top: 25%;
+    top: 15%;
     width: 25%;
     height: 7%;
     background-color: red;
@@ -194,7 +181,7 @@ img {
     border-radius: 1px 20px 20px 1px;
 }
 #B{
-    top: 40%;
+    top: 30%;
     width: 60%;
     height: 7%;
     background-color: red;
@@ -202,7 +189,7 @@ img {
     border-radius: 1px 20px 20px 1px;
 }
 #C{
-    top: 55%;
+    top: 45%;
     width: 10%;
     height: 7%;
     background-color: red;
@@ -210,7 +197,7 @@ img {
     border-radius: 1px 20px 20px 1px;
 }
 #D{
-    top: 70%;
+    top: 60%;
     width: 5%;
     height: 7%;
     background-color: red;
@@ -228,13 +215,14 @@ img {
 }
 
 #message {
-    height: 13%;
-    width: 20%;
+    height: 23%;
+    width: 30%;
+    border: 1px solid whitesmoke;
     border-radius: 10px;
+    color: whitesmoke;
     position: absolute;
-    top: 40%;
-    left: 40%;
-    background: rgba(250, 250, 250, 0.8);
+    top: 35%;
+    left: 35%;
     z-index: 1001;
     text-align: center;
     padding-top: 7%;
