--- a/modules/quiz/quiz.css
+++ b/modules/quiz/quiz.css
@@ -2,18 +2,21 @@
     width: 63%;
     left: 2%;
     top: 3%;
-    height: 90%;
+    height: 95%;
     overflow: hidden;
     /*display: none;*/
+    z-index: auto;
 
 }
 
 #kbc-question{
-    height: 35%;
+    height: 27.5%;
     width: 89%;
     color: white;
-    padding: 20px;
+    padding: 5% 5% 11%;
     position: absolute;
+    font-size: 0.9em;
+    overflow: hidden;
 }
 
 #kbc-learn-more {
@@ -26,22 +29,35 @@
 #options-area {
     position: relative;
     left: 2%;
-    top: 45%;
+    top: 41%;
     width: 96%;
     height: 50%;
 
 }
 
 .kbc-answer-block {
-    list-style: none;
-    background-repeat: no-repeat;
-    margin-left: -13%;
     cursor: pointer;
     margin-top:10px;
-    padding: 12px;
+    padding: 12px 22px;
     color: white;
-    font-size: 14px;
+    font-size: 0.75em;
     position: relative;
+    word-break: break-all;
+    width: 88%;
+}
+
+.kbc-answer-block img {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
+.kbc-answer-block div {
+    position: relative;
+    z-index: 1;
 }
 
 .unselectable {
@@ -61,4 +77,8 @@
     font-size: 40px;
     color: white;
     text-align: center;
+}
+
+#kbc-learn-more {
+    cursor: pointer;
 }
